Update file structure

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<div id="app"></div>
+<div id="'loadcontent">
+    <div id="app"></div>
+    <script src="@Url.Content("~/dist/webpack/home/index.js")"></script>
+</div>
