--- a/APSReactTutorial/Views/Shared/_Layout.cshtml
+++ b/APSReactTutorial/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Playground", "Playground", "Home")</li>
+                    <li>@Html.ActionLink("Practice", "Practice", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
